[lworld] Call site reresolution fails for ValueBootstrapMethods::isSubstitutable0 callee

XMLWordPrintable

      Using a heavily modified java.util.HashMap using inline classes...

      Running test/jdk/java/util/Spliterator/SpliteratorTraversingAndSplittingTest.java

      # Internal Error (open/src/hotspot/share/interpreter/bytecode.cpp:123), pid=31480, tid=31764
      # assert(is_valid()) failed: check invoke
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0) (fastdebug build 14-lworldea+0-2019-10-26-1616424.rriggs.valhalla-dev)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-lworldea+0-2019-10-26-1616424.rriggs.valhalla-dev, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x6ed3d5] Bytecode_invoke::verify() const+0x285
      #
      ...
      #
      # An error report file with more information is saved as:
      # .../build/linux-x64/test-support/jtreg_open_test_jdk_jdk_util/scratch/10/hs_err_pid31480.log
      (attached)

            Assignee:
            Tobias Hartmann
            Reporter:
            Roger Riggs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: