8234108: [lworld] Call site reresolution fails for ValueBootstrapMethods::isSubstitutable0 callee

Reviewed-by: dsimms